Avoid use of legacy JVM MaxPermSize option in partest
In Java 8+, which we require on this branch, this option
is a no-op and triggers a JVM warning these days.

See  http://openjdk.java.net/jeps/122